<resources>
    <!-- APP-NAME -->
    <string name="app_name">BongoTime</string>

    <!-- DESCRIPTIONS -->
    <string name="logoContentDesc">BongoTime Logo</string>
    <string name="bongoPlayDesc">Bongo for Playing</string>
    <string name="infoSignDesc">Info Sign</string>
    <string name="buttonDKDesc">Choose Donkey Kong</string>
    <string name="buttonBongoDesc">Choose Bongo</string>
    <string name="DKPlayLeftDesc">Left DK for Playing</string>
    <string name="DKPlayRightDesc">Right DK for Playing</string>
    <string name="openSettingsOfRandom">Click to open settings of random</string>

    <!-- IN-APP TEXT -->
    <string name="howToPlayTextTop">This app uses the proximity sensor on your phone. This sensor detects when something (like your hand) hovers over your phone, it can detect that up to a couple centimeters. It is often located directly above your screen. This means you can use your hands to do a bongo beat while hitting the air above your phone.</string>
    <string name="howToPlayTextBottom">In the settings you can choose between multiple bongo sounds as well as multiple players you would like to play with.</string>
    <string name="settingsBongoText">Sounds:</string>
    <string name="settingsPlayerText">Player:</string>
    <string name="playInstructions">Hover your hand over your phone!</string>
    <string name="randomSelectSounds">Select sounds</string>
    <string name="randomCancel">Cancel</string>
    <string name="randomSave">Save</string>

    <!-- BUTTON-TEXT -->
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="howToPlay">How To Play</string>
    <string name="bongoOne">Bongo 1</string>
    <string name="bongoTwo">Bongo 2</string>
    <string name="bongoThree">Bongo 3</string>
    <string name="bongoFour">Bongo 4</string>
    <string name="bongoRandom">Random</string>
</resources>
