<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayActivity">

    <ImageView
        android:id="@+id/DKPlay_Left"
        android:layout_width="382dp"
        android:layout_height="508dp"
        android:contentDescription="@string/DKPlayLeftDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bongoPlay"
        app:srcCompat="@drawable/dk_left" />

    <ImageView
        android:id="@+id/DKPlay_Right"
        android:layout_width="382dp"
        android:layout_height="508dp"
        android:contentDescription="@string/DKPlayRightDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/DKPlay_Left"
        app:srcCompat="@drawable/dk_right" />

    <ImageView
        android:id="@+id/bongoPlay"
        android:layout_width="wrap_content"
        android:layout_height="519dp"
        android:contentDescription="@string/bongoPlayDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bongo" />

    <TextView
        android:id="@+id/playInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/playInstructions"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/bongoPlay"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>